# bootstrap

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  agents.md  install.sh  pyproject.toml
src/bootstrap/: cli.py  naming.py
src/bootstrap/commands/: add.py  doctor.py  init.py
src/bootstrap/templates/backend-go/backend/: Taskfile.yml  go.mod.jinja  main.go  main.go.jinja
src/bootstrap/templates/backend-go/backend/tests/: example_test.go
src/bootstrap/templates/backend-python/backend/: Taskfile.yml  pyproject.toml.jinja
src/bootstrap/templates/backend-python/backend/src/: main.py.jinja
src/bootstrap/templates/monorepo/: .editorconfig  .gitignore  .pre-commit-config.yaml  Agents.md.jinja  README.md.jinja  Taskfile.yml  Taskfile.yml.jinja  agents.md  copier.yaml  pyproject.toml.jinja
src/bootstrap/templates/monorepo/.github/workflows/: ci.yml
src/bootstrap/templates/monorepo/api/: openapi.yaml  openapi.yaml.jinja
src/bootstrap/templates/monorepo/apps/cli/: pyproject.toml  pyproject.toml.jinja
src/bootstrap/templates/monorepo/apps/cli/src/cli/: main.py.jinja
src/bootstrap/templates/monorepo/cli/: main.py  pyproject.toml.jinja
src/bootstrap/templates/monorepo/cli/src/cli/: main.py.jinja
src/bootstrap/templates/monorepo/infra/: docker-compose.yml  fly.toml
src/bootstrap/templates/monorepo/ops/runbooks/: db-restore.md
src/bootstrap/templates/package-go/: go.mod.jinja  {{package_name}}.go.jinja
src/bootstrap/templates/package-python/: copier.yaml  pyproject.toml.jinja
tests/: conftest.py  test_naming.py
tests/e2e/: test_generation.py
(+1 files in other folders)
