[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bootstrap"
version = "0.1.1"
description = "SaaS Scaffolding Tool"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "AR", email = "you@example.com" }
]
dependencies = [
    "typer>=0.9.0",
    "copier>=9.0.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "sh>=2.0.0" # Clean shell command interactions
]

[project.scripts]
bootstrap = "bootstrap.cli:app"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mock",
    "pytest-cov",
    "mypy",
    "ruff"
]

[tool.hatch.build.targets.wheel]
packages = ["src/bootstrap"]

[tool.hatch.build]
include = ["src/bootstrap/templates"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py312"
