[project]
name = "{{ project_name }}-cli"
version = "0.1.0"
description = "CLI for {{ project_name }}"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "api-client-python",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]

[tool.uv.sources]
api-client-python = { workspace = true }
